fix code bug
Signed-off-by: mengleang-ngoun <mengleang-ngoun@mptc.gov.kh>